# pros-hybrid

./: BUILD_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  README.md  SHARED_CODE_SETUP.md
pros-hardware/: project.pros
pros-hardware/pros-sim/: CMakeLists.txt
pros-hardware/pros-sim/include/sim/: sim_client.h
pros-hardware/pros-sim/src/: main.cpp
pros-hardware/pros-sim/src/pros/: adi.cpp  adi_class.cpp  ai_vision.cpp  ai_vision_class.cpp  device.cpp  device_class.cpp  distance.cpp  distance_class.cpp  ext_adi.cpp  gps.cpp  gps_class.cpp  imu.cpp  imu_class.cpp  link.cpp  link_class.cpp  llemu_ns.cpp  misc.cpp  misc_class.cpp  motor_group_class.cpp  motors.cpp  motors_class.cpp  optical.cpp  optical_class.cpp  rotation.cpp  rotation_class.cpp  rtos.cpp  rtos_class.cpp  screen.cpp  screen_ns.cpp  serial.cpp  vision.cpp  vision_class.cpp
pros-hardware/vex-simulator/: pyproject.toml
pros-hardware/vex-simulator/vex_simulator/: protocol.py
pros-project/: PROS_V5_API_SURFACE.md  project.pros
pros-project/docs/: SIMULATOR_ARCHITECTURE.md
pros-project/include/: main.h
pros-project/src/: main.cpp
pros-sim/: .gitignore  CMakeLists.txt  README.md
pros-sim/include/: actor.h  api.h  autons.h  intake.h  lever.h  main.h  odom.h  path.h  pid.h  pod.h  pure_pursuit.h  pursuit_presets.h  user_control.h
pros-sim/include/pros/: abstract_motor.hpp  device.h  device.hpp  distance.h  distance.hpp  error.h  imu.h  imu.hpp  llemu.h  llemu.hpp  misc.h  misc.hpp  motor_group.hpp  motors.h  motors.hpp  rotation.h  rotation.hpp  rtos.h  rtos.hpp
pros-sim/include/sim/: sim_client.h
pros-sim/src/: actor.cpp  autons.cpp  intake.cpp  lever.cpp  main.cpp  odom.cpp  path.cpp  pod.cpp  pure_pursuit.cpp  sim_main.cpp  user_control.cpp
pros-sim/src/api/: controller.cpp  device.cpp  distance.cpp  imu.cpp  lcd.cpp  motor_group.cpp  motors.cpp  rotation.cpp
pros-sim/src/pros/: adi.cpp  adi_class.cpp  ai_vision.cpp  ai_vision_class.cpp  device.cpp  device_class.cpp  distance.cpp  ext_adi.cpp  gps_class.cpp  imu.cpp  link.cpp  llemu_ns.cpp  misc_class.cpp  motor_group_class.cpp  motors.cpp  motors_class.cpp  optical.cpp  rotation.cpp  rtos.cpp  rtos_class.cpp  serial.cpp
pros-sim/src/rtos/: rtos.cpp
pros-sim/src/sim/: sim_client.cpp  sim_device_registry.cpp  sim_device_registry.h  sim_transport.cpp  sim_transport.h
robot-simulator/: CMakeLists.txt  README.md  main_entry.cpp
shared/include/: main.h
shared/src/: main.cpp
vex-simulator/: .gitignore  README.md  pyproject.toml  robot_config.toml  test_client.py
vex-simulator/vex_simulator/: __init__.py  __main__.py  config.py  devices.py  path_editor.py  path_loader.py  protocol.py  robot_state.py  server.py  visualizer.py
